# actix-inf-template

./: .gitignore  Cargo.toml
.metals/: metals.lock.db  metals.mv.db
load_testing/: artillery-load-test.yml  load_test.sh
scripts/: export_sklearn.py  export_torch_large_mlp.py  export_torch_mlp.py  main2.rsx
src/: api.rs  io.rs  main.rs  model.rs  ort_model.rs  session.rs  tract_model.rs
