[package]
name = "actix-inf-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.190", features = ["derive"] }
tract-onnx = "0.21.1"
ort = "1.16.2"
image = "0.24.1"
ndarray = "0.15.6"
llm = "0.1"
env_logger = "0.10.0"
time = "0.3.30"
anyhow = "1.0.86"